[gd_scene load_steps=9 format=3 uid="uid://dkgfw60uv84fp"]

[ext_resource type="Script" path="res://maps/KayKitCity/props/traffic_light_a_bodies.gd" id="1_egxgu"]
[ext_resource type="ArrayMesh" uid="uid://b4uey6sj07txa" path="res://assets/KayKit_City_Builder_Bits_1.0_SOURCE/Assets/obj/trafficlight_A.obj" id="1_mu2bn"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_jcshc"]
friction = 0.2
bounce = 0.1

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_vbre6"]
points = PackedVector3Array(0.0217214, 0.492123, -0.0109425, -0.14039, 0.306871, 0.00064138, -0.14039, 0.306871, 0.0237854, 0.0217214, 0.283694, -0.0109425, -0.128806, 0.387909, -0.0341103, -0.117206, 0.387909, 0.0469452, 0.0217214, 0.295283, 0.0237854, -0.0130303, 0.492123, 0.0122015, -0.0593341, 0.318439, -0.0341103, -0.14039, 0.399477, 0.0237854, 0.0217214, 0.411065, 0.0237854, 0.0101375, 0.492123, -0.0225185, -0.0593341, 0.341596, 0.0469452, 0.0217214, 0.295283, -0.0225185, -0.128806, 0.306871, -0.0225185, -0.0130303, 0.492123, -0.0225185, -0.128806, 0.306871, 0.0353613, 0.0217214, 0.492123, 0.0122015, -0.0708863, 0.387909, 0.0469452, -0.0130303, 0.283694, -0.0225185, -0.0130303, 0.283694, 0.0122015, -0.128806, 0.341596, 0.0469452, -0.0593341, 0.387909, -0.0341103, -0.14039, 0.387909, -0.0109425, 0.0217214, 0.411065, -0.0225185, -0.14039, 0.399477, 0.0122015, -0.0477661, 0.306871, 0.0353613, -0.14039, 0.318439, -0.0109425, -0.0593341, 0.376341, 0.0469452, -0.119812, 0.327433, -0.0288633, -0.128806, 0.376341, 0.0469452, 0.0217214, 0.283694, 0.0122015)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_81f6e"]
points = PackedVector3Array(0.0333008, 0.225758, 0.0237842, -0.0361754, -0.00573306, -0.0225219, -0.0361754, -0.00573306, 0.0237842, -0.0361754, 0.225758, -0.0109403, 0.0333008, -0.00573306, -0.0225219, 0.0217124, 0.225758, -0.0341103, 0.0217124, -0.00573306, 0.0353659, -0.0245938, 0.214199, 0.0353659, -0.0130121, 0.283666, -0.0225219, -0.0245938, -0.00573306, -0.0341103, -0.0245938, 0.225758, -0.0341103, 0.0217124, 0.283666, 0.0122026, 0.0217124, 0.225758, 0.0353659, 0.0333008, 0.225758, -0.0225219, -0.0130121, 0.283666, 0.0122026, 0.0217124, -0.00573306, -0.0341103, 0.0333008, -0.00573306, 0.0237842, -0.0245938, -0.00573306, 0.0353659, -0.0361754, 0.214199, 0.0237842, 0.0101307, 0.283666, -0.0225219, -0.0361754, 0.214199, -0.0225219, 0.0217124, 0.283666, -0.0109403, -0.0130121, 0.225758, 0.0353659, -0.0361754, 0.225758, 0.0122026)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_sus0v"]
points = PackedVector3Array(0.0332963, 0.526899, 0.012214, -0.117231, 0.550058, -0.0341058, -0.117231, 0.550058, 0.0353659, 0.0448802, 0.73529, 0.0585019, -0.0940473, 0.73529, -0.0456897, -0.0361754, 0.71213, 0.116421, 0.0332963, 0.550058, 0.116421, 0.0101285, 0.492123, -0.0225219, 0.0101285, 0.723674, -0.0225219, -0.117231, 0.723674, 0.0237978, -0.0477276, 0.515283, 0.0932378, -0.0824634, 0.503739, -0.0456897, 0.0448802, 0.503739, 0.0816539, 0.0448802, 0.73529, 0.0932378, -0.0477276, 0.723674, -0.0456897, -0.0361754, 0.550058, 0.116421, -0.0477276, 0.73529, 0.0932378, -0.117231, 0.71213, -0.0341058, -0.0940473, 0.515283, 0.046918, -0.0130235, 0.492123, 0.012214, -0.0477276, 0.515283, -0.0456897, -0.117231, 0.71213, 0.0353659, 0.0217124, 0.723674, -0.010938, 0.0448802, 0.515283, 0.046918, -0.0246074, 0.723674, 0.116421, 0.0448802, 0.723674, 0.046918, 0.0217124, 0.492123, -0.010938, -0.0130235, 0.723674, -0.0341058, 0.0255653, 0.701177, 0.107401, -0.0940473, 0.73529, 0.046918, -0.0593115, 0.73529, -0.0456897, -0.0940473, 0.515283, -0.0456897)

[sub_resource type="SphereMesh" id="SphereMesh_a40gc"]
radius = 0.1
height = 0.2
radial_segments = 12
rings = 6

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_8sg8w"]
points = PackedVector3Array(0.0936065, 0.02736, 0.00539793, -0.0948951, -0.0273234, -0.000674605, -0.091251, -0.033203, -0.00368038, -0.000674605, 0.0273401, -0.094887, -0.0399752, 0.087652, 0.0235076, 0.0236569, -0.0882122, 0.0388687, -0.00672694, 0.027269, 0.0932929, 0.0355924, -0.0634742, -0.0671733, 0.0447611, 0.0878618, 0.00537491, -0.0401042, -0.0636745, -0.0643473, -0.0825919, 0.0242577, -0.0492209, -0.0490121, -0.0271631, 0.0808904, 0.0844492, -0.0243056, 0.0449228, 0.0841661, 0.0242248, -0.0461204, -0.00677629, 0.0886195, -0.0434421, -0.0822497, 0.0271665, 0.0476506, -0.0342178, -0.091493, 0.0115061, 0.0386685, 0.0635835, 0.0659385, 0.0449186, -0.0243224, 0.0844413, 0.0780522, -0.0605514, -0.00368842, 0.0176745, -0.091791, -0.0312626, 0.0414341, 0.0631837, -0.063856, 0.0476588, -0.0271797, -0.0822327, -0.0492209, -0.0242577, -0.0825919, -0.067573, 0.0608245, -0.0401971, -0.0397945, -0.0631744, 0.0655115, -0.0370558, 0.0606348, 0.0690515, 0.0810561, 0.0242025, 0.050793, -0.000674605, -0.02734, -0.0948867, 0.0841654, -0.0242246, -0.04612, -0.0948948, 0.0273233, -0.000674605, -0.000674605, -0.0364572, 0.090488)

[node name="StandalonePropBodies" type="Node3D"]
script = ExtResource("1_egxgu")

[node name="RigidBody3D" type="RigidBody3D" parent="." groups=["CanCrash"]]
collision_layer = 64
collision_mask = 87
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
mass = 100.0
physics_material_override = SubResource("PhysicsMaterial_jcshc")
center_of_mass_mode = 1
center_of_mass = Vector3(0, 3, 0)
max_contacts_reported = 10
contact_monitor = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="RigidBody3D"]
transform = Transform3D(7, 0, 0, 0, 7, 0, 0, 0, 7, 0, 0, 0)
mesh = ExtResource("1_mu2bn")
skeleton = NodePath("../../..")

[node name="_CollisionShape3D_91283" type="CollisionShape3D" parent="RigidBody3D"]
transform = Transform3D(7, 0, 0, 0, 7, 0, 0, 0, 7, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_vbre6")

[node name="_CollisionShape3D_91282" type="CollisionShape3D" parent="RigidBody3D"]
transform = Transform3D(7, 0, 0, 0, 7, 0, 0, 0, 7, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_81f6e")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
transform = Transform3D(7, 0, 0, 0, 7, 0, 0, 0, 7, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_sus0v")

[node name="GreenLight" type="OmniLight3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.888, 0.8)
light_color = Color(0.313726, 1, 0.313726, 1)
light_energy = 0.0
shadow_enabled = true
distance_fade_enabled = true
omni_range = 2.0
omni_shadow_mode = 0

[node name="RedLight" type="OmniLight3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.812, 0.8)
light_color = Color(1, 0.313726, 0.313726, 1)
light_energy = 0.0
shadow_enabled = true
distance_fade_enabled = true
omni_range = 2.0
omni_shadow_mode = 0

[node name="Generic6DOFJoint3D" type="Generic6DOFJoint3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
node_a = NodePath("../StaticBody3D")
node_b = NodePath("../RigidBody3D")
angular_limit_x/enabled = false
angular_limit_y/enabled = false
angular_limit_z/enabled = false

[node name="StaticBody3D" type="StaticBody3D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
mesh = SubResource("SphereMesh_a40gc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_8sg8w")

[node name="CenterOfMassMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 2.5, 0.3)
